--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
+  <i class="material-icons orange600">face</i><i class="material-icons md-dark md-inactive">face</i>
   <app-itm-root>Loading...</app-itm-root>
 </body>
 </html>
