Added HttpClient Demo on dataService

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
-<body>
+<body class="mat-app-background">
   <i class="material-icons orange600">face</i><i class="material-icons md-dark md-inactive">face</i>
   <app-itm-root>Loading...</app-itm-root>
 </body>
